--- a/package.json
+++ b/package.json
@@ -4,7 +4,19 @@
   "description": "A React hook to work with keyboard input.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage",
+    "test-watch": "jest --watchAll --coverage"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "html"
+    ],
+    "transform": {
+      "^.+\\.jsx$": "babel-jest",
+      "^.+\\.js$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -29,9 +41,18 @@
     "react": "^16.8.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.8.0",
     "husky": "^2.2.0",
+    "jest": "^24.8.0",
+    "jest-dom": "^3.2.2",
     "lint-staged": "^8.1.6",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "react-dom": "^16.8.0",
+    "react-testing-library": "^7.0.0"
   },
   "husky": {
     "hooks": {
