--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
 node_js:
   - "8"
-script: npm run test
+script:
+  - npm install codecov -g
+  - npm run test
+after_success:
+  - codecov
