--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
 language: node_js
 node_js:
   - "8"
-script:
-  - npm install codecov -g
-  - npm run test
-after_success:
-  - codecov
+script: npm run test-ci
