--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
+    "test-ci": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "test-watch": "jest --watchAll --coverage"
   },
   "jest": {
@@ -46,6 +47,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.8.0",
+    "coveralls": "^3.0.3",
     "husky": "^2.2.0",
     "jest": "^24.8.0",
     "jest-dom": "^3.2.2",
