--- a/package.json
+++ b/package.json
@@ -39,22 +39,24 @@
   },
   "homepage": "https://github.com/bobinrinder/react-keyboard-input-hook#readme",
   "dependencies": {
-    "react": "^16.8.0"
+    "react": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@testing-library/react": "^12.0.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^24.8.0",
-    "coveralls": "^3.0.3",
-    "husky": "^2.2.0",
-    "jest": "^24.8.0",
-    "jest-dom": "^3.2.2",
-    "lint-staged": "^8.1.6",
-    "prettier": "^1.17.0",
-    "react-dom": "^16.8.0",
-    "react-testing-library": "^7.0.0"
+    "babel-jest": "^27.0.6",
+    "coveralls": "^3.1.1",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
+    "jest-dom": "^4.0.0",
+    "lint-staged": "^11.0.1",
+    "prettier": "^2.3.2",
+    "react-dom": "^17.0.2",
+    "react-testing-library": "^8.0.1"
   },
   "husky": {
     "hooks": {
